card style updates: * re-adding watch icon mobile styles (prevent shrinking icon) * removing margins and setting width to auto for responsive={true} cards (let cards fully expand width in mobile) * for direction="row" cards in mobile, match flex-basis with column card__thumbnail (don't shrink thumbnail height in mobile)

--- a/src/scss/grommet-core/_objects.card.scss
+++ b/src/scss/grommet-core/_objects.card.scss
@@ -39,7 +39,14 @@ $card-hover-color: #EBEBEB;
     }
   }
 
-  // &__thumbnail {
+  &.#{$grommet-namespace}box--responsive {
+    @include media-query(palm) {
+      width: auto;
+      margin: 0;
+    }
+  }
+
+  &__thumbnail {
   //   width: 100%;
   //   height: $inuit-base-spacing-unit * 11;
   //   flex-shrink: 1;
@@ -50,14 +57,14 @@ $card-hover-color: #EBEBEB;
   //     }
   //   }
   //
-  //   .#{$grommet-namespace}control-icon-watch {
-  //     @include media-query(palm) {
-  //       // don't shrink video WatchIcon when in mobile
-  //       width: round($inuit-base-spacing-unit * 6);
-  //       height: round($inuit-base-spacing-unit * 6);
-  //     }
-  //   }
-  // }
+    .#{$grommet-namespace}control-icon-watch {
+      @include media-query(palm) {
+        // don't shrink video WatchIcon when in mobile
+        width: round($inuit-base-spacing-unit * 6);
+        height: round($inuit-base-spacing-unit * 6);
+      }
+    }
+  }
 
   &__content {
     // truncate text paragraphs after 8 lines
@@ -111,6 +118,14 @@ $card-hover-color: #EBEBEB;
   div:focus,
   a:focus {
     outline: none;
+  }
+
+  &--direction-row {
+    @include media-query(palm) {
+      .#{$grommet-namespace}card__thumbnail {
+        flex-basis: $size-small;  // match basis for thumbnail in Card.js
+      }
+    }
   }
 
   // &--direction-row {
